--- a/views/design/green/about.ejs
+++ b/views/design/green/about.ejs
@@ -14,8 +14,7 @@
         <h1>
             <%= title %>
         </h1>
-        <p>About the green site</p>
-        <a href="./green">site</a>
+        <p>Example about page<br>soon to have free stock images of green things</p>
     </main>
     <footer></footer>
 </body>
