--- a/views/design/green/index.ejs
+++ b/views/design/green/index.ejs
@@ -14,8 +14,7 @@
         <h1>
             <%= title %>
         </h1>
-        <p>Welcome to the green site</p>
-        <a href="./green/index">site</a>
+        <p>Welcome to the green site<br>soon to have free stock images of green things</p>
     </main>
     <footer></footer>
 </body>
