--- a/views/design/index.ejs
+++ b/views/design/index.ejs
@@ -17,7 +17,7 @@
         <p>Each sub-site has a theme </p>
         <div>
             <a href="site/green/index">Green</a>
-            <p>A site that is solely shades of green no template used</p>
+            <p>This is a site made without a reference template, made entirely with shades of the color green</p>
         </div>
     </main>
     <% include ../partials/footer%>
