--- a/views/design/green/content.ejs
+++ b/views/design/green/content.ejs
@@ -12,10 +12,9 @@
     <% include ../partials/header%>
     <main>
         <h1>
-            <%= title %>
+            Green <%= title %>
         </h1>
-        <p>Green site Content</p>
-        <a href="./green">site</a>
+        <p>Example content<br>soon to have free stock images of green things</p>
     </main>
     <footer></footer>
 </body>
