--- a/views/about.ejs
+++ b/views/about.ejs
@@ -18,11 +18,11 @@
             <figure>
                 <div>
                     <img src="/images/better.png"
-                         alt="a better website" >
+                         alt="pic of me" >
                 </div>
                 <figcaption>
                     <p>
-                        A better website
+                        pic of me
                     </p>
                 </figcaption>
             </figure>
