--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,7 +6,7 @@
     </div>
     <div>
         <p>
-            Light Designs &copy; 2017 Steven A Light<br/>Powered by NodeJS
+            S.Light Design &copy; 2017 Steven Light<br/>Powered by NodeJS
         </p>
     </div>
 </footer>
