--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,12 +1,11 @@
 
 ////background colors
 
-bkgdHeader = #222
+bgHeader = #222
 
-bkgdHTML = #444
+bgHtml = #444
 
-bkgdMain = rgba(255,255,255, .15)
-
+bgMain = clearWhite15
 
 ////accent colors
 
@@ -60,7 +59,20 @@ footerText = colorLightText
 colorBodyCopy = colorDarkText
 
 
+//Transparencies
+clearWhite10 = rgba(255,255,255, 0.1)
+clearWhite15 = rgba(255,255,255, .15)
+clearWhite20 = rgba(255,255,255, 0.2)
+clearWhite30 = rgba(255,255,255, 0.3)
+clearWhite40 = rgba(255,255,255, 0.4)
+clearWhite50 = rgba(255,255,255, 0.5)
 
+
+clearBlack10 = rgba(0,0,0, 0.1)
+clearBlack20 = rgba(0,0,0, 0.2)
+clearBlack30 = rgba(0,0,0, 0.3)
+clearBlack40 = rgba(0,0,0, 0.4)
+clearBlack50 = rgba(0,0,0, 0.5)
 
 ////color codes
 //#018A4A
@@ -103,7 +115,7 @@ textBodyCopy = 'Alegreya Sans'
 html
     height 100%
     width 100%
-    background-color bkgdHTML
+    background-color bgHtml
     font 10px textBodyCopy, Helvetica, Arial, sans-serif
 //    width 100%
 
@@ -115,11 +127,11 @@ h2
 h3
     font-size 2.4rem
 h4
-    padding-left 16px
+    padding-left 20px
 h5
-    padding-left 14px
+    padding-left 18px
 h6
-    padding-left 12px
+    padding-left 16px
 
 h1
 h2
@@ -133,6 +145,7 @@ h6
     border-bottom-color lightAccent1
     border-width 0
     margin-top 0
+    border-bottom-left-radius 30px
 
 h1
 h2
@@ -152,9 +165,9 @@ h6
 h1
     padding-left 26px
 h2
+    padding-left 24px
 h3
-    padding-left 20px
-
+    padding-left 22px
 h4
 h5
 h6
@@ -173,13 +186,13 @@ body
         display block
         top 0
         height 60px
-        background-color bkgdHeader
+        background-color bgHeader
         margin 0
         padding 10px 0 0 0
         z-index 1000
         border-bottom solid lightAccent1 10px
         > nav
-            @media (min-width: 1000px)
+            @media (min-width: 1200px)
                 width calc(90%)
                 left 5%
             width calc(100%)
@@ -189,6 +202,10 @@ body
             position absolute
             bottom 0
             > ul
+                @media (min-width: 800px)
+                    font-size 2.4rem
+                @media (min-width: 1000px)
+                    font-size 3rem
                 width 100%
                 height 100%
                 margin 0
@@ -198,14 +215,17 @@ body
                 bottom 0
                 list-style-type none
                 font-family textHeading
-                font-size 3rem
+                font-size 2.2rem
                 > li
+                    @media (min-width: 1000px)
+                        width calc(20% - 8px)
+                        margin 0 4px
                     display inline-flex
                     flex-basis auto
                     position relative
                     bottom 0
-                    width calc(20% - 8px)
-                    margin 0 4px
+                    width 20%
+                    margin 0
                     padding 0
                     height 100%
                     &:hover
@@ -289,8 +309,11 @@ body
             padding 0
             position relative
         > div:first-child
-            width 800px
-            left calc(50% - 400px)
+            @media (min-width: 820px)
+                width 800px
+                left calc(50% - 400px)
+            width 100%
+            left 0
             top 0
             border-bottom solid #fff 2px
             > p
@@ -321,49 +344,33 @@ body
         width 100%
     main
         color colorBodyCopy
-        width 95%
+        width calc(100% - 40px)
         position relative
-        left calc(50% - (95% / 2))
-        padding 30px 0
+        left 0/*calc(50% - (95% / 2))*/
+        padding 30px 20px
         margin 0
         display inline-block
-        background-color noColor
+        /*background-color noColor*/
+        background-color bgMain
         @media (min-width: 1000px)
+            width calc(90% - 40px)
+            padding 30px 20px
+            left calc(50% - (90% / 2))
+        @media (min-width: 1200px)
             width calc(75% - 40px)
             padding 30px 20px
             left calc(50% - (75% / 2))
-            background-color bkgdMain
         > article
             display flex
             width calc(100%)
             padding 15px 0
             margin 20px 0
-            border-bottom solid bkgdMain 4px
+            border-bottom solid bgMain 4px
             @media (min-width: 1000px)
                 width calc(100%)
                 margin 20px 0
             &:nth-of-type(odd)
                 //background-color lightAccent6
-                h1
-                    padding-left 30px
-                h2
-                h3
-                    padding-left 24px
-                h4
-                    padding-left 20px
-                h5
-                    padding-left 18px
-                h6
-                    padding-left 16px
-                h1
-                h2
-                h3
-                h4
-                h5
-                h6
-                    border-left-width 0
-                    border-right-color noColor
-                    border-right-width 4px
             &:nth-of-type(even)
                 //background-color darkAccent6
                 > figure
@@ -375,30 +382,34 @@ body
                     margin 0 5px 0 0
                     
             > figure
-                background-color rgba(0,0,0,.1);
-                width calc(35% - 15px)
+                background-color clearBlack10;
+                width calc(35% - 5px)
+                height 200px
                 margin 0 5px 0 0
-                padding 4px
-                //border #000 solid 1px
+                /*padding 2px*/
+                border #000 solid 2px
                 display inline-block
                 position relative
                 > div
-                    height 80%
-                    max-height 190px
+                    height calc(80% - 1px)
                     width 100%
-                    max-width 470px
                     display inline-flex
                     justify-content center
+                    margin 0
+                    padding 0
+                    border-bottom #000 solid 1px
                     > img
                         width 70%
                 > figcaption
                     font-family textFigCaption, sans-serif
-                    max-height calc(20% - 4px)
-                    width calc(100% - 8px)
+                    height calc(20%)
+                    width calc(100%)
                     position absolute
-                    bottom 4px
-                    background-color rgba(255,255,255,.1)
+                    bottom 0
+                    background-color clearWhite20
                     > p
+                        /*margin 0
+                        padding 0*/
                         font-size 1.2rem
                         text-align center
                         
@@ -411,7 +422,8 @@ body
                     color inherit
 
 a
-    color linkColor1
+    color lightAccent4
     text-decoration none
     &:hover
-        color: linkColor2
+        color: darkAccent4
+        background-color lightAccent4
