--- a/views/design/index.ejs
+++ b/views/design/index.ejs
@@ -13,12 +13,55 @@
     <% include ../partials/header%>
     <main>
         <h1>Site Mockup Gallery</h1>
-        <p>The below websites offer examples of my skills in responsive web design with a variety of website templates</p>
-        <p>Each sub-site has a theme </p>
-        <div>
-            <a href="site/green/index">Green</a>
-            <p>This is a site made without a reference template, made entirely with shades of the color green</p>
-        </div>
+        <p>The below websites offer examples of my skills in design and development with a variety of templates/themes</p>
+        <article>
+            <figure>
+                <div>
+                    <img src="/images/sites/green.png"
+                         alt="A site made with green" >
+                </div>
+                <figcaption>
+                    <p>Site of Green</p>
+                </figcaption>
+            </figure>
+            <div>
+                <h3>The Green Site</h3>
+                <a href="site/green/index">The Green Site</a>
+                <p>This is a site made without a reference template, made entirely with shades of the color green</p>
+            </div>
+        </article>
+        <article>
+            <figure>
+                <div>
+                    <img src="/images/sites/temp.png"
+                         alt="A site made with a template" >
+                </div>
+                <figcaption>
+                    <p>Template 1</p>
+                </figcaption>
+            </figure>
+            <div>
+                <h3>Template Site 1</h3>
+                <a href="site/temp/index">Template 1</a>
+                <p>This is a site made with a reference template</p>
+            </div>
+        </article>
+        <article>
+            <figure>
+                <div>
+                    <img src="/images/sites/temp.png"
+                         alt="A site made with a template" >
+                </div>
+                <figcaption>
+                    <p>Template 2</p>
+                </figcaption>
+            </figure>
+            <div>
+                <h3>Template Site 2</h3>
+                <a href="site/temp/index">Template 2</a>
+                <p>This is a site made with a reference template</p>
+            </div>
+        </article>
     </main>
     <% include ../partials/footer%>
 </body>
