--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <% include partials/header%>
     <main>
         <h1>
-            Website Design by Steven Light
+            Web Design and Development by Steven Light
         </h1>
         <article>
             <figure>
@@ -27,7 +27,7 @@
                 </figcaption>
             </figure>
             <div>
-                <h3>Title</h3>
+                <h3>Design</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
         </article>
@@ -44,7 +44,7 @@
                 </figcaption>
             </figure>
             <div>
-                <h3>Title</h3>
+                <h3>Development</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
         </article>
@@ -61,7 +61,7 @@
                 </figcaption>
             </figure>
             <div>
-                <h3>Title</h3>
+                <h3>Projects</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
         </article>
