--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,12 +4,12 @@
             <li class="title">
                 <a>
                     <div>
-                        <p>Light Designs</p>
+                        <p>S.Light Design</p>
                     </div>
                 </a>
             </li>
             <% if (page==='home'){%>
-            <li  class="currentPage">
+            <li  class="currentPage" title="Home Page">
                 <a>
                     <div>
                         <p>Home</p>
@@ -17,7 +17,7 @@
                 </a>
             </li>
             <% } else {%>
-            <li  class="">
+            <li  class="" title="Home Page">
                 <a href="/" >
                     <div>
                         <p>Home</p>
@@ -26,7 +26,7 @@
             </li>
             <%}%>
             <% if (page==='gallery'){%>
-            <li  class="currentPage">
+            <li  class="currentPage" title="Past Projects">
                 <a>
                     <div>
                         <p>Gallery</p>
@@ -36,7 +36,7 @@
             <% } else {%>
             <li  class="">
                 <!--       href="/gallery"         -->
-                <a wip  title="work in progress" >
+                <a wip  title="work in progress">
                     <div>
                         <p>Gallery</p>
                     </div>
@@ -44,7 +44,7 @@
             </li>
             <%}%>
             <% if (page==='design'){%>
-            <li  class="currentPage">
+            <li  class="currentPage" title="Website Mockups">
                 <a>
                     <div>
                         <p>Mockups</p>
@@ -53,7 +53,7 @@
             </li>
             <% } else {%>
             <li  class="">
-                <a href="/site" >
+                <a href="/site" title="Website Mockups">
                     <div>
                         <p>Mockups</p>
                     </div>
@@ -61,7 +61,7 @@
             </li>
             <%}%>
             <% if (page==='about'){%>
-            <li  class="currentPage">
+            <li  class="currentPage" title="About us">
                 <a>
                     <div>
                         <p>About</p>
@@ -70,7 +70,7 @@
             </li>
             <% } else {%>
             <li  class="">
-                <a href="/about" >
+                <a href="/about" title="About us">
                     <div>
                         <p>about</p>
                     </div>
