--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 <footer>
     <div>
         
-        <p><a href="mailto:stevelight16@gmail.com">my E-mail address</a></p>
-        <p><a href="https://www.linkedin.com/in/steve-light-5619a542/">My LinkedIn profile</a></p>        
+        <p><a class="dark" href="mailto:stevelight16@gmail.com">my E-mail address</a></p>
+        <p><a class="dark" href="https://www.linkedin.com/in/steve-light-5619a542/">My LinkedIn profile</a></p>        
     </div>
     <div>
         <p>
