--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,36 +26,18 @@
             </li>
             <%}%>
             <% if (page==='gallery'){%>
-            <li  class="currentPage" title="Past Projects">
+            <li  class="currentPage" title="Project Gallery">
                 <a>
                     <div>
-                        <p>Gallery</p>
+                        <p>Project Gallery</p>
                     </div>
                 </a>
             </li>
             <% } else {%>
             <li  class="">
-                <!--       href="/gallery"         -->
-                <a wip  title="work in progress">
+                <a href="/gallery" title="Project Gallery">
                     <div>
-                        <p>Gallery</p>
-                    </div>
-                </a>
-            </li>
-            <%}%>
-            <% if (page==='design'){%>
-            <li  class="currentPage" title="Website Mockups">
-                <a>
-                    <div>
-                        <p>Mockups</p>
-                    </div>
-                </a>
-            </li>
-            <% } else {%>
-            <li  class="">
-                <a href="/site" title="Website Mockups">
-                    <div>
-                        <p>Mockups</p>
+                        <p>Project Gallery</p>
                     </div>
                 </a>
             </li>
