--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -1,2 +1,74 @@
-Go back.
-No page yet.
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>
+        S.Light Design | <%= page %>
+    </title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+<!--    <kkklink rel='stylesheet' href='/stylesheets/<=stylesheet%>.css' />-->
+</head>
+
+<body>
+    <% include ./partials/header%>
+    <main>
+        <h1>Project Gallery</h1>
+        <p>The below projects offer examples of my skills in design and development with a variety of technologies</p>
+        <section></section>
+        <section>
+            <h2>Website Template Design</h2>
+            <p>The sites below are made using a template or a generic theme.<br>Each is built in Node.JS using Express</p>
+            <article>
+                <figure>
+                    <div>
+                        <img src="/images/sites/green.png"
+                             alt="A site made with green" >
+                    </div>
+                    <figcaption>
+                        <p>Site of Green</p>
+                    </figcaption>
+                </figure>
+                <div>
+                    <h3>The Green Site</h3>
+                    <a href="gallery/site/green/index">The Green Site</a>
+                    <p>This is a site made without a reference template, made entirely with shades of the color green</p>
+                </div>
+            </article>
+            <article>
+                <figure>
+                    <div>
+                        <img src="/images/sites/temp.png"
+                             alt="A site made with a template" >
+                    </div>
+                    <figcaption>
+                        <p>Template 1</p>
+                    </figcaption>
+                </figure>
+                <div>
+                    <h3>Template Site 1</h3>
+                    <a href="./site/temp/index">Template 1</a>
+                    <p>This is a site made with a reference template</p>
+                </div>
+            </article>
+            <article>
+                <figure>
+                    <div>
+                        <img src="/images/sites/temp.png"
+                             alt="A site made with a template" >
+                    </div>
+                    <figcaption>
+                        <p>Template 2</p>
+                    </figcaption>
+                </figure>
+                <div>
+                    <h3>Template Site 2</h3>
+                    <a href="./site/temp/index">Template 2</a>
+                    <p>This is a site made with a reference template</p>
+                </div>
+            </article>
+        </section>
+    </main>
+    <% include ./partials/footer%>
+</body>
+
+</html>
